force-app/main/default/objects/MAGI_Knowledge__kav/fields/Bengkel_rekanan__c.field-meta.xml
<CustomField>
    <fullName>Bengkel_rekanan__c</fullName>
    <label>Bengkel rekanan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>