force-app/main/default/objects/MAGI_Knowledge__kav/fields/Bengkel_rekanan_File__c.field-meta.xml
<CustomField>
    <fullName>Bengkel_rekanan_File__c</fullName>
    <label>Bengkel rekanan File</label>
    <type>File</type>
</CustomField>