force-app/main/default/objects/MAGI_Knowledge__kav/fields/Cabang_MTF__c.field-meta.xml
<CustomField>
    <fullName>Cabang_MTF__c</fullName>
    <label>Cabang MTF</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>