force-app/main/default/objects/MAGI_Knowledge__kav/fields/Cabang_MTF_File__c.field-meta.xml
<CustomField>
    <fullName>Cabang_MTF_File__c</fullName>
    <label>Cabang MTF File</label>
    <type>File</type>
</CustomField>