force-app/main/default/objects/MAGI_Knowledge__kav/fields/FAQ_File__c.field-meta.xml
<CustomField>
    <fullName>FAQ_File__c</fullName>
    <label>FAQ File</label>
    <type>File</type>
</CustomField>