force-app/main/default/objects/MAGI_Knowledge__kav/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <label>Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>