force-app/main/default/objects/MAGI_Knowledge__kav/fields/Information_File__c.field-meta.xml
<CustomField>
    <fullName>Information_File__c</fullName>
    <label>Information File</label>
    <type>File</type>
</CustomField>