force-app/main/default/objects/MAGI_Knowledge__kav/fields/Perhitungan_premi__c.field-meta.xml
<CustomField>
    <fullName>Perhitungan_premi__c</fullName>
    <label>Perhitungan premi</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>