force-app/main/default/objects/MAGI_Knowledge__kav/fields/Perhitungan_premi_File__c.field-meta.xml
<CustomField>
    <fullName>Perhitungan_premi_File__c</fullName>
    <label>Perhitungan premi File</label>
    <type>File</type>
</CustomField>