force-app/main/default/objects/MAGI_Knowledge__kav/fields/Perluasan__c.field-meta.xml
<CustomField>
    <fullName>Perluasan__c</fullName>
    <label>Perluasan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>