force-app/main/default/objects/MAGI_Knowledge__kav/fields/Towing__c.field-meta.xml
<CustomField>
    <fullName>Towing__c</fullName>
    <label>Towing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>